--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Interstellar Voyage</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="TheusGabriel_Mendez.css">
+        <link rel="stylesheet" href="csss.css">
         <script type="text/javascript"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     </head>
